fixing margin gap bug

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -56,7 +56,7 @@ h2{
 .container {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    margin: 10px;
     position: relative;
     color: white;
   }
